--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "test-node": "mocha test/unit/node/index.js --delay --ui=tdd --timeout=5000 --exit",
     "test-extension": "vscode-test",
     "test-build-scripts": "cd build && npm run test",
-    "preinstall": "node build/npm/preinstall.ts",
-    "postinstall": "node build/npm/postinstall.ts",
+    "preinstall-disabled": "node build/npm/preinstall.ts",
+    "postinstall-disabled": "node build/npm/postinstall.ts",
     "compile": "npm run gulp compile",
     "compile-check-ts-native": "tsgo --project ./src/tsconfig.json --noEmit --skipLibCheck",
     "watch": "npm-run-all -lp watch-client watch-extensions",
