--- a/.github/workflows/build-codexflow.yml
+++ b/.github/workflows/build-codexflow.yml
@@ -54,15 +54,10 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm ci
+          npm ci --ignore-scripts
         env:
           ELECTRON_SKIP_BINARY_DOWNLOAD: 1
           PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
-
-      - name: Disable preinstall/postinstall hooks
-        run: |
-          npm pkg delete scripts.preinstall
-          npm pkg delete scripts.postinstall
 
       - name: Compile TypeScript
         run: npm run gulp compile-build
